clients/tui/src/ui/snapshots/mp_tui__ui__golden_frames__golden_help_overlay.snap
---
source: clients/tui/src/ui/golden_frames.rs
expression: "frame_snapshot(&mut app, WIDTH, HEIGHT)"
---
== text 120x40 (trailing spaces trimmed) ==
00 |╭ Mail ──────────────────────────────────╮╭ Headers ───────────────────────────────────────────────────────────────────╮
01 |│> 󰅲 Inbox  5                      ╭ Help ──────────────────────────────────────────╮>                                 │
02 |│  󰏫 Drafts  2                     │  GLOBAL                                        │                                  │
03 |│  󰑫 Sent 41                       │  q           Quit                              │  ✓                               │
04 |│  󰄼 Archive 128                   │  1-9         Jump to mailbox                   │                                  │
05 |│                                  │  Tab         Cycle focus forward               │                                  │
06 |╰──────────────────────────────────│  Shift+Tab   Cycle focus backward              │──────────────────────────────────╯
07 |╭ Inbox ───────────────────────────│  ?           Toggle this help                  │──────────────────────────────────╮
08 |│   DATE       SUBJECT             │  :           Command palette (run an action by │                                  │
09 |│  2026-07-28 󰃭  Einladung: Baust│  Ctrl+p      Command palette (run an action by │8-03T10:30:00+02:00               │
10 |│   2026-07-27 Re: Statusbericht KW│  z           Zoom / unzoom the focused pane    │                                  │
11 |│  2026-07-26  Scan 2026-07-26 (3│  !           Toggle activity log               │                                  │
12 |│   2026-07-24 Wochenrückblick: seh│  x           Send current draft (approve + send│                                  │
13 |│   2026-07-21  Rechnung 2026-0714│  ff          Search all mail (sender, subject, │ed to Exchange (no Graph in v1).  │
14 |│                                  │  cn          New draft                         │──────────────────────────────────╯
15 |│                                  │  cs          Manage signatures                 │──────────────────────────────────╮
16 |│                                  │  gm          Go to mailboxes (sidebar)         │                                  │
17 |│                                  │  ga          Switch account                    │                                  │
18 |│                                  │  ss          Quick sync                        │                                  │
19 |│                                  │  sS          Full sync                         │                                  │
20 |│                                  │  sl          Activity log overlay              │                                  │
21 |│                                  │  sc          Open config.toml in $EDITOR       │                                  │
22 |│                                  │  sf          Open log file in $EDITOR          │                                  │
23 |│                                  │  Space m     Switch to Mail view               │                                  │
24 |│                                  │  Space c     Switch to Contacts view           │                                  │
25 |│                                  │  Space a     Switch to Calendar view           │                                  │
26 |│                                  │                                                │                                  │
27 |╰──────────────────────────────────│  MESSAGE (list, headers, body)                 │                                  │
28 |╭ Activity ────────────────────────│  J / K       Next / previous message           │                                  │
29 |│  No activity yet                 │  Enter / e   Open in editor (mail read-only)   │                                  │
30 |│                                  │  r           Reply                             │                                  │
31 |│                                  │  a           Archive                           │                                  │
32 |│                                  │  d           Delete                            │                                  │
33 |╰──────────────────────────────────│  u           Toggle read/unread                │                                  │
34 |╭ View ────────────────────────────│  *           Toggle flag/star                  │                                  │
35 |│     mail  |  contacts  |  calenda│  M           Move to mailbox (fuzzy picker)    │                                  │
36 |╰──────────────────────────────────│  y           Copy selector (mp://)             │──────────────────────────────────╯
37 |╭──────────────────────────────────│  Esc         Clear selection / return to list  │──────────────────────────────────╮
38 |│ HELP                             ╰─────────────────── 1-36/114 ───────────────────╯                                  │
39 |╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
== style runs (col ranges are half-open; rows with no meaning-carrying style are omitted) ==
02 |bold@36..44
09 |bg:surface+fg:selection+bold@1..35
11 |bold@1..35
27 |bold@36..67
35 |bold@5..11
38 |bold@1..7
