clients/tui/src/ui/snapshots/mp_tui__ui__golden_frames__golden_mail_view_with_selection.snap
---
source: clients/tui/src/ui/golden_frames.rs
expression: "frame_snapshot(&mut app, WIDTH, HEIGHT)"
---
== text 120x40 (trailing spaces trimmed) ==
00 |╭ Mail ──────────────────────────────────╮╭ Headers ───────────────────────────────────────────────────────────────────╮
01 |│> 󰅲 Inbox  5                            ││ From: Anna Weber <anna.weber@example.com>                                  │
02 |│  󰏫 Drafts  2                           ││ To: sylvain@example.org                                                    │
03 |│  󰑫 Sent 41                             ││ Subj: Re: Statusbericht KW31                                               │
04 |│  󰄼 Archive 128                         ││ Date: 2026-07-27  [inbox]                                                  │
05 |│                                        ││                                                                            │
06 |╰────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────╯
07 |╭ Inbox ─────────────────────────────────╮╭ Body ──────────────────────────────────────────────────────────────────────╮
08 |│      DATE       SUBJECT                ││Danke, sieht gut aus.                                                       │
09 |│󰄴    2026-07-28 󰃭  Einladung: Bauste… ││                                                                            │
10 |│󰄱     2026-07-27 Re: Statusbericht KW31 ││Ein Punkt bleibt offen: der export-Schritt.                                 │
11 |│󰄴    2026-07-26  Scan 2026-07-26 (3 … ││                                                                            │
12 |│󰄱     2026-07-24 Wochenrückblick: sehr… ││                                                                            │
13 |│󰄱     2026-07-21  Rechnung 2026-0714   ││                                                                            │
14 |│                                        ││                                                                            │
15 |│                                        ││                                                                            │
16 |│                                        ││                                                                            │
17 |│                                        ││                                                                            │
18 |│                                        ││                                                                            │
19 |│                                        ││                                                                            │
20 |│                                        ││                                                                            │
21 |│                                        ││                                                                            │
22 |│                                        ││                                                                            │
23 |│                                        ││                                                                            │
24 |│                                        ││                                                                            │
25 |│                                        ││                                                                            │
26 |│                                        ││                                                                            │
27 |╰────────────────────────────────────────╯│                                                                            │
28 |╭ Activity ──────────────────────────────╮│                                                                            │
29 |│  No activity yet                       ││                                                                            │
30 |│                                        ││                                                                            │
31 |│                                        ││                                                                            │
32 |│                                        ││                                                                            │
33 |╰────────────────────────────────────────╯│                                                                            │
34 |╭ View ──────────────────────────────────╮│                                                                            │
35 |│     mail  |  contacts  |  calendar     ││                                                                            │
36 |╰────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────╯
37 |╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
38 |│ 2 SELECTED   j/k Navigate  v Select  J / K Next/prev  Enter / e Open (read-only)  r Reply  a Archive  d Delete …     │
39 |╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
== style runs (col ranges are half-open; rows with no meaning-carrying style are omitted) ==
01 |bold@43..50
02 |bold@43..48
03 |bold@43..50
04 |bold@43..50
09 |fg:selection+bold@1..4 bold@4..5 fg:selection+bold@5..41
10 |bg:surface+fg:selection+bold@1..41 bg:surface@71..77
11 |fg:selection+bold@1..4 bold@4..5 fg:selection+bold@5..41
35 |bold@5..11
38 |bold@1..13 bold@15..18 bold@29..30 bold@39..44 bold@56..65 bold@84..85 bold@93..94 bold@104..105
